@@ -3,12 +3,12 @@ by dificulty levels:
 
 = Relatively easy =
  [ ] improve shell scripts for keepalived/heartbeat: *really* important
- [ ] NACK as default protocol
- [ ] rename persistent to alarm
+ [X] NACK as default protocol
+ [X] rename persistent to alarm, rename nack to ftfw
  [X] manpage for conntrackd(8)
  [ ] add scripts to use the floating priority feature in keepalived to avoid 
      premature take over.
- [ ] ignorepool with unlimited size and ignore networks
+ [X] ignorepool with unlimited size and ignore networks
  [ ] selective conntracks removal
  [ ] debian/rpm packages
  [ ] improve website
@@ -18,7 +18,7 @@ by dificulty levels:
 = Requires some work =
  [ ] study better keepalived transitions
  [ ] test/fix ipv6 support
- [ ] add support setup related conntracks
+ [X] add support setup related conntracks
  [ ] NAT sequence adjustment support
 
 = Open issues that won't be ever resolved =
